<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#06A39E"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guidelineH1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/showPass"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:textSize="18sp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/text_view_border"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH2"
        app:layout_constraintEnd_toEndOf="@id/guidelineV2"
        app:layout_constraintStart_toStartOf="@id/guidelineV1"
        app:layout_constraintTop_toTopOf="@id/guidelineH1" />

    <ImageView
        android:id="@+id/copyImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_baseline_content_copy_24"
        app:layout_constraintBottom_toBottomOf="@+id/showPass"
        app:layout_constraintEnd_toEndOf="@+id/showPass"
        app:layout_constraintTop_toTopOf="@+id/showPass"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/copy_the_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/lower_case_letter"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/upper_case_letter"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/numbers"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH5"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/special_letters"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH6"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto"
        android:text="@string/password_lentgh"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH7"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.13" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.62" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/lowerCase"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintTop_toTopOf="@+id/guidelineH2" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/upperCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintTop_toTopOf="@+id/guidelineH3" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH5"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintTop_toTopOf="@+id/guidelineH4" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/specialLetters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH6"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintTop_toTopOf="@+id/guidelineH5" />

    <EditText
        android:id="@+id/passworLength"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/_5_20"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH7"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintTop_toTopOf="@+id/guidelineH6"
        android:autofillHints="Password Lentgh" />

    <Button
        android:id="@+id/generate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="90dp"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/roboto"
        android:text="@string/generate_the_password"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH7"
        app:layout_constraintVertical_bias="0.783" />

</androidx.constraintlayout.widget.ConstraintLayout>